--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
+application-aws.yml
+src/main/resources/application.yml
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
@@ -35,3 +38,5 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
