--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:  servlet:    encoding:      charset: utf-8      enabled: true
 
 spring:
   datasource:
-    url: jdbc:mysql://database-1.czjf7eh7j6s3.ap-northeast-2.rds.amazonaws.com/myapp?useUnicode=true&characterEncoding=utf-8    username: admin    password: password123!    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://database-1.czjf7eh7j6s3.ap-northeast-2.rds.amazonaws.com/myapp?useUnicode=true&characterEncoding=utf-8    username: admin    password: password123!    driver-class-name: com.mysql.cj.jdbc.Driver
     
   jpa:
-    show-sql: true    generate-ddl: true      servlet:    multipart:      enabled: true      max-file-size: 20MB                                 
+    show-sql: true    generate-ddl: true      servlet:    multipart:      enabled: true      max-file-size: 20MB      max-request-size: 10MB            
